@@ -110,7 +110,6 @@ COURIERTLS=@bindir@/couriertls
 #
 # OpenSSL:
 #
-# SSL2 - SSLv2
 # SSL3 - SSLv3
 # SSL23 - either SSLv2 or SSLv3 (also TLS1, it seems)
 # TLS1 - TLS1
@@ -147,9 +146,7 @@ COURIERTLS=@bindir@/couriertls
 #
 # OpenSSL:
 #
-# TLS_CIPHER_LIST="SSLv3:TLSv1:!SSLv2:HIGH:!LOW:!MEDIUM:!EXP:!NULL:!aNULL@STRENGTH"
-#
-# To enable SSL2, remove the obvious "!SSLv2" part from the above list.
+# TLS_CIPHER_LIST="SSLv3:TLSv1:HIGH:!LOW:!MEDIUM:!EXP:!NULL:!aNULL@STRENGTH"
 #
 #
 # GnuTLS:
