@@ -255,7 +255,6 @@ ESMTP_TLS_VERIFY_DOMAIN=0
 #
 # OpenSSL:
 #
-# SSL2 - SSLv2
 # SSL3 - SSLv3
 # SSL23 - either SSLv2 or SSLv3 (also TLS1, it seems)
 # TLS1 - TLS1
@@ -285,9 +284,7 @@ ESMTP_TLS_VERIFY_DOMAIN=0
 #
 # OpenSSL:
 #
-# TLS_CIPHER_LIST="SSLv3:TLSv1:!SSLv2:HIGH:!LOW:!MEDIUM:!EXP:!NULL:!aNULL@STRENGTH"
-#
-# To enable SSL2, remove the obvious "!SSLv2" part from the above list.
+# TLS_CIPHER_LIST="SSLv3:TLSv1:HIGH:!LOW:!MEDIUM:!EXP:!NULL:!aNULL@STRENGTH"
 #
 #
 # GnuTLS:
